Reverted binary sensor

--- a/binary_sensor/motion_driveway.yaml
+++ b/binary_sensor/motion_driveway.yaml
@@ -1,9 +1,9 @@
-- platform: template
-  sensors:
-    motion_driveway:
-      friendly_name: Driveway Camera
-      device_class: motion
-      entity_id: camera.driveway
-      value_template: "{{ is_state('camera.driveway', 'motion') }}"
-      delay_off:
-        seconds: 30
+platform: template
+sensors:
+  motion_driveway:
+    friendly_name: Driveway Camera
+    device_class: motion
+    entity_id: camera.driveway
+    value_template: "{{ is_state('camera.driveway', 'motion') }}"
+    delay_off:
+      seconds: 30
