--- a/binary_sensor/motion_basement.yaml
+++ b/binary_sensor/motion_basement.yaml
@@ -1,9 +1,9 @@
-- platform: template
-  sensors:
-    motion_basement:
-      friendly_name: Basement Camera
-      device_class: motion
-      entity_id: camera.basement
-      value_template: "{{ is_state('camera.basement', 'motion') }}"
-      delay_off:
-        seconds: 30
+platform: template
+sensors:
+  motion_basement:
+    friendly_name: Basement Camera
+    device_class: motion
+    entity_id: camera.basement
+    value_template: "{{ is_state('camera.basement', 'motion') }}"
+    delay_off:
+      seconds: 30
