--- a/automation/front_door.yaml
+++ b/automation/front_door.yaml
@@ -6,6 +6,8 @@
   trigger:
     - platform: time
       at: '21:00:00'
+    - platform: time
+      at: '23:00:00'
   condition:
       condition: and
       conditions:
@@ -41,11 +43,11 @@
   action:
     - service: notify.alexa_media_kitchen_dot
       data:
-        message: "Someone is at the front door!"
+        message: "ding dong! Someone is at the front door!"
         data:
           type: tts
     - service: notify.alexa_media_master_bedroom_dot
       data:
-        message: "Someone is at the front door!"
+        message: "ding dong! Someone is at the front door!"
         data:
           type: tts
