--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -22,9 +22,9 @@
     sensors:
       garage_door_main_obs:
         friendly_name: "Main Garage Obstruction"
-        value_template: "{{ state_attr('cover.garage_door_main', 'obstruction-detected') }}"j
+        value_template: "{{ state_attr('cover.garage_door_main', 'obstruction-detected') }}"
   - platform: template
     sensors:
       garage_door_small_obs:
         friendly_name: "Small Garage Obstruction"
-        value_template: "{{ state_attr('cover.garage_door_small', 'obstruction-detected') }}"j
+        value_template: "{{ state_attr('cover.garage_door_small', 'obstruction-detected') }}"
