Added google distance matrix api and sensors for mobile trackers

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -31,4 +31,4 @@ reolink_user: xxxxxxxxxxxxxxxxxxxxxx
 reolink_password: xxxxxxxxxxxxxxxxxxxxxx
 broadlink_ip: xxxxxxxxxxxxxxxxxxxxxx
 broadlink_mac: "00:00:00:00:00:00"
-
+google_maps_api: xxxxxxxxxxxxxxxxxxxxxx
