--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -35,10 +35,10 @@
     sensors:
       jeanie_to_home_one_hour:
         friendly_name: "jeanie to home over one hour"
-        value_template: "{{ states.sensor.jeanie_to_home > 60 }}"
+        value_template: "{{ states.sensor.jeanie_to_home | float > 60 }}"
 
   - platform: template
     sensors:
       michael_to_home_one_hour:
         friendly_name: "Michael to home over one hour"
-        value_template: "{{ states.sensor.michael_to_home > 60 }}"
+        value_template: "{{ states.sensor.michael_to_home | float > 60 }}"
