--- a/automation/laundry.yaml
+++ b/automation/laundry.yaml
@@ -26,7 +26,7 @@
 - alias: 'Dryer has completed a load'
   trigger:
     - platform: state
-      entity_id: binary_sensor.dryer_wash_completed
+      entity_id: binary_sensor.dryer_dry_completed
       to: 'on'
   condition:
     condition: time
