--- a/automation/espresso_machine.yaml
+++ b/automation/espresso_machine.yaml
@@ -39,6 +39,9 @@
           state: 'not_home'
           for:
             hours: 1
+        - condition: state
+          entity_id: switch.jasco_products_28169_plug_in_one_outlet_smart_switch_switch
+          state: 'on'
   action:
     - service_template: "switch.turn_off"
       entity_id: switch.jasco_products_28169_plug_in_one_outlet_smart_switch_switch
