--- a/automation/espresso_machine.yaml
+++ b/automation/espresso_machine.yaml
@@ -45,7 +45,7 @@
   action:
     - service_template: "switch.turn_off"
       entity_id: switch.jasco_products_28169_plug_in_one_outlet_smart_switch_switch
-    - service: notify.michael_jeanie_iphones
+    - service: notify.mobile_app_echelon
       data:
         title: "Home Assistant Alerts"
         message: "Espresso Machine was turned off as no one is home."
