--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -32,3 +32,5 @@ reolink_password: xxxxxxxxxxxxxxxxxxxxxx
 broadlink_ip: xxxxxxxxxxxxxxxxxxxxxx
 broadlink_mac: "00:00:00:00:00:00"
 google_maps_api: xxxxxxxxxxxxxxxxxxxxxx
+netgear_user: xxxxxxxxxxxxxxxxxxxxxx
+netgear_password: xxxxxxxxxxxxxxxxxxxxxx
