Added away mode automation

--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -29,3 +29,9 @@
       michael_to_home_one_hour:
         friendly_name: "Michael to home over one hour"
         value_template: "{{ states.sensor.michael_to_home | float > 60 }}"
+
+  - platform: template
+    sensors:
+      michael_to_home_ten_minutes:
+        friendly_name: "Michael to home over five minutes"
+        value_template: "{{ states.sensor.michael_to_home | float > 5 }}"
