--- a/automation/away_mode.yaml
+++ b/automation/away_mode.yaml
@@ -29,6 +29,6 @@
     - service: notify.mobile_app_echelon
       data:
         title: "Home Assistant Alerts"
-        message: "Away mode, all doors have been locked."
+        message: "Detected you are greater then five minutes from home, any unlocked doors have been locked."
         data:
-          subtitle: "Away mode"
+          subtitle: "Away mode Automation"
