--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -28,16 +28,16 @@
     sensors:
       michael_to_home_greater_one_hour:
         friendly_name: "Michael to home over one hour"
-        value_template: "{{ states.sensor.michael_to_home | float > 60 }}"
+        value_template: "{{ states('sensor.michael_to_home') | float > 60 }}"
 
   - platform: template
     sensors:
       michael_to_home_greater_five_minutes:
         friendly_name: "Michael to home over five minutes"
-        value_template: "{{ states.sensor.michael_to_home | float > 5 }}"
+        value_template: "{{ states('sensor.michael_to_home') | float > 0 }}"
 
   - platform: template
     sensors:
       michael_to_home_less_ten_minutes:
         friendly_name: "Michael to home less then ten minutes"
-        value_template: "{{ states.sensor.michael_to_home | float < 10 }}"
+        value_template: "{{ states('sensor.michael_to_home') | float < 10 }}"
