--- a/sensor/template.yaml
+++ b/sensor/template.yaml
@@ -34,7 +34,7 @@
     sensors:
       michael_to_home_greater_five_minutes:
         friendly_name: "Michael to home over five minutes"
-        value_template: "{{ states('sensor.michael_to_home') | float = 0 }}"
+        value_template: "{{ states('sensor.michael_to_home') | float == 1 }}"
 
   - platform: template
     sensors:
