--- a/configuration.yaml
+++ b/configuration.yaml
@@ -49,6 +49,7 @@ cover:
   - platform: myq
     username: !secret myq_username
     password: !secret myq_password
+    type: liftmaster
 
 zwave:
   usb_path: /dev/ttyACM0
