--- a/automation/garage_door.yaml
+++ b/automation/garage_door.yaml
@@ -19,7 +19,7 @@
       entity_id: cover.garage_door
     - delay:
         seconds: 5
-    - service: notify.mobile_app_echelon
+    - service: notify.mobile_app_iphone
       data:
         title: "Home Assistant Alerts"
         message: "The Main Garage Door has been closed."
