--- a/automation/garage_entry_door.yaml
+++ b/automation/garage_entry_door.yaml
@@ -29,7 +29,7 @@
         message: "The garage entry door was unlocked, I locked it."
         data:
           type: tts
-    - service: notify.mobile_app_echelon
+    - service: notify.mobile_app_iphone
       data:
         title: "Home Assistant Alerts"
         message: "The garage entry door has been locked."
