--- a/automation/away_mode.yaml
+++ b/automation/away_mode.yaml
@@ -30,7 +30,7 @@
     - service: notify.mobile_app_iphone
       data:
         title: "Home Assistant Alerts"
-        message: "Detected you are greater than five minutes from home, running away automations"
+        message: "Detected you are more than five minutes from home, executing away automations"
         data:
           subtitle: "Away mode Automation"
 
