--- a/automation/away_mode.yaml
+++ b/automation/away_mode.yaml
@@ -13,7 +13,7 @@
       conditions:
           - condition: state
             entity_id: group.mobile_trackers
-            state: "away"
+            state: "not_home"
           - condition: or
             conditions:
                 - condition: state
@@ -49,8 +49,8 @@
   trigger:
       - platform: state
         entity_id: group.mobile_trackers
-        to: home
-        from: away
+        to: "home"
+        from: "not_home"
   condition:
       - condition: and
         conditions:
@@ -78,8 +78,8 @@
   trigger:
       - platform: state
         entity_id: group.mobile_trackers
-        to: away
-        from: home
+        to: "not_home"
+        from: "home"
   condition:
       - condition: and
         conditions:
