--- a/automation/lights.yaml
+++ b/automation/lights.yaml
@@ -12,6 +12,7 @@
   trigger:
     - platform: sun
       event: sunrise
+      offset: "-05:00:00"
   action:
     - service_template: "switch.turn_off"
       entity_id: switch.in_wall_smart_toggle_switch_120_277vac_current_value
@@ -29,6 +30,7 @@
   trigger:
     - platform: sun
       event: sunrise
+      offset: "-05:00:00"
   action:
     - service_template: "switch.turn_off"
       entity_id: switch.in_wall_smart_toggle_switch_120_277vac_current_value_2
